src/SylParser.py
# Generated from Syl.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SylParser ( Parser ):

    grammarFileName = "Syl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'#'", "'add'", "'sub'", 
                     "'mul'", "'div'", "'mod'", "'eq'", "'ne'", "'gt'", 
                     "'lt'", "'ge'", "'le'", "'and'", "'or'", "'not'", "':='", 
                     "'{'", "'}'", "'('", "')'", "';'", "','", "'void'", 
                     "'BEGIN'", "'END'", "'function'", "'print'", "'if'", 
                     "'returns'", "'while'", "'then'", "'else'", "'fi'", 
                     "'end'", "'int'", "'boolean'", "'real'" ]

    symbolicNames = [ "<INVALID>", "WS", "COMMENTS", "PLUS", "MINUS", "MULTIPLY", 
                      "DIVIDE", "MODULE", "EQUALS", "NOT_EQUALS", "GREATER_THAN", 
                      "LESS_THAN", "GREATER_EQUAL", "LESS_EQUAL", "AND", 
                      "OR", "NOT", "ASSIGN", "OPEN_BLOCK", "CLOSE_BLOCK", 
                      "OPEN_ARGUMENTS", "CLOSE_ARGUMENTS", "END_OF_INSTRUCTION", 
                      "SEPARATOR", "VOID", "BEGIN", "END", "DEF_FUNC", "ST_OUTPUT", 
                      "IF", "RETURN", "WHILE", "THEN", "ELSE", "END_FI", 
                      "END_WHILE_FOR", "INTEGER", "BOOLEAN", "DOUBLE", "STRING", 
                      "BOOLEAN_VALUES", "TRUE", "FALSE", "ID", "NUMBER", 
                      "DECIMAL_NUMBER", "FLOATING_NUMBER", "HEX_NUMBER", 
                      "OCTAL_NUMBER" ]

    RULE_main = 0
    RULE_functions = 1
    RULE_instruction = 2
    RULE_assign = 3
    RULE_variableId = 4
    RULE_functionId = 5
    RULE_functionCall = 6
    RULE_value_type = 7
    RULE_function_type = 8
    RULE_if_block = 9
    RULE_while_block = 10
    RULE_standard_output = 11
    RULE_expression = 12
    RULE_variable_type = 13
    RULE_digit = 14
    RULE_boolean_values = 15

    ruleNames =  [ "main", "functions", "instruction", "assign", "variableId", 
                   "functionId", "functionCall", "value_type", "function_type", 
                   "if_block", "while_block", "standard_output", "expression", 
                   "variable_type", "digit", "boolean_values" ]

    EOF = Token.EOF
    WS=1
    COMMENTS=2
    PLUS=3
    MINUS=4
    MULTIPLY=5
    DIVIDE=6
    MODULE=7
    EQUALS=8
    NOT_EQUALS=9
    GREATER_THAN=10
    LESS_THAN=11
    GREATER_EQUAL=12
    LESS_EQUAL=13
    AND=14
    OR=15
    NOT=16
    ASSIGN=17
    OPEN_BLOCK=18
    CLOSE_BLOCK=19
    OPEN_ARGUMENTS=20
    CLOSE_ARGUMENTS=21
    END_OF_INSTRUCTION=22
    SEPARATOR=23
    VOID=24
    BEGIN=25
    END=26
    DEF_FUNC=27
    ST_OUTPUT=28
    IF=29
    RETURN=30
    WHILE=31
    THEN=32
    ELSE=33
    END_FI=34
    END_WHILE_FOR=35
    INTEGER=36
    BOOLEAN=37
    DOUBLE=38
    STRING=39
    BOOLEAN_VALUES=40
    TRUE=41
    FALSE=42
    ID=43
    NUMBER=44
    DECIMAL_NUMBER=45
    FLOATING_NUMBER=46
    HEX_NUMBER=47
    OCTAL_NUMBER=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(SylParser.BEGIN, 0)

        def END(self):
            return self.getToken(SylParser.END, 0)

        def EOF(self):
            return self.getToken(SylParser.EOF, 0)

        def functions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SylParser.FunctionsContext)
            else:
                return self.getTypedRuleContext(SylParser.FunctionsContext,i)


        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SylParser.InstructionContext)
            else:
                return self.getTypedRuleContext(SylParser.InstructionContext,i)


        def standard_output(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SylParser.Standard_outputContext)
            else:
                return self.getTypedRuleContext(SylParser.Standard_outputContext,i)


        def functionCall(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SylParser.FunctionCallContext)
            else:
                return self.getTypedRuleContext(SylParser.FunctionCallContext,i)


        def getRuleIndex(self):
            return SylParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)




    def main(self):

        localctx = SylParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_main)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==27:
                self.state = 32
                self.functions()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(SylParser.BEGIN)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 9280082149376) != 0):
                self.state = 42
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 39
                    self.instruction()
                    pass

                elif la_ == 2:
                    self.state = 40
                    self.standard_output()
                    pass

                elif la_ == 3:
                    self.state = 41
                    self.functionCall()
                    pass


                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(SylParser.END)
            self.state = 48
            self.match(SylParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF_FUNC(self):
            return self.getToken(SylParser.DEF_FUNC, 0)

        def function_type(self):
            return self.getTypedRuleContext(SylParser.Function_typeContext,0)


        def functionId(self):
            return self.getTypedRuleContext(SylParser.FunctionIdContext,0)


        def OPEN_ARGUMENTS(self):
            return self.getToken(SylParser.OPEN_ARGUMENTS, 0)

        def CLOSE_ARGUMENTS(self):
            return self.getToken(SylParser.CLOSE_ARGUMENTS, 0)

        def OPEN_BLOCK(self):
            return self.getToken(SylParser.OPEN_BLOCK, 0)

        def RETURN(self):
            return self.getToken(SylParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(SylParser.ExpressionContext,0)


        def END_OF_INSTRUCTION(self):
            return self.getToken(SylParser.END_OF_INSTRUCTION, 0)

        def CLOSE_BLOCK(self):
            return self.getToken(SylParser.CLOSE_BLOCK, 0)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SylParser.InstructionContext)
            else:
                return self.getTypedRuleContext(SylParser.InstructionContext,i)


        def standard_output(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SylParser.Standard_outputContext)
            else:
                return self.getTypedRuleContext(SylParser.Standard_outputContext,i)


        def functionCall(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SylParser.FunctionCallContext)
            else:
                return self.getTypedRuleContext(SylParser.FunctionCallContext,i)


        def VOID(self):
            return self.getToken(SylParser.VOID, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SylParser.ID)
            else:
                return self.getToken(SylParser.ID, i)

        def SEPARATOR(self, i:int=None):
            if i is None:
                return self.getTokens(SylParser.SEPARATOR)
            else:
                return self.getToken(SylParser.SEPARATOR, i)

        def getRuleIndex(self):
            return SylParser.RULE_functions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctions" ):
                listener.enterFunctions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctions" ):
                listener.exitFunctions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctions" ):
                return visitor.visitFunctions(self)
            else:
                return visitor.visitChildren(self)




    def functions(self):

        localctx = SylParser.FunctionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functions)
        self._la = 0 # Token type
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.match(SylParser.DEF_FUNC)
                self.state = 51
                self.function_type()
                self.state = 52
                self.functionId()
                self.state = 53
                self.match(SylParser.OPEN_ARGUMENTS)
                self.state = 54
                self.match(SylParser.CLOSE_ARGUMENTS)
                self.state = 55
                self.match(SylParser.OPEN_BLOCK)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 9280082149376) != 0):
                    self.state = 59
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        self.state = 56
                        self.instruction()
                        pass

                    elif la_ == 2:
                        self.state = 57
                        self.standard_output()
                        pass

                    elif la_ == 3:
                        self.state = 58
                        self.functionCall()
                        pass


                    self.state = 63
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 64
                self.match(SylParser.RETURN)
                self.state = 65
                self.expression(0)
                self.state = 66
                self.match(SylParser.END_OF_INSTRUCTION)
                self.state = 67
                self.match(SylParser.CLOSE_BLOCK)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.match(SylParser.DEF_FUNC)
                self.state = 70
                self.match(SylParser.VOID)
                self.state = 71
                self.functionId()
                self.state = 72
                self.match(SylParser.OPEN_ARGUMENTS)
                self.state = 73
                self.match(SylParser.CLOSE_ARGUMENTS)
                self.state = 74
                self.match(SylParser.OPEN_BLOCK)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 9280082149376) != 0):
                    self.state = 78
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        self.state = 75
                        self.instruction()
                        pass

                    elif la_ == 2:
                        self.state = 76
                        self.standard_output()
                        pass

                    elif la_ == 3:
                        self.state = 77
                        self.functionCall()
                        pass


                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 83
                self.match(SylParser.CLOSE_BLOCK)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.match(SylParser.DEF_FUNC)
                self.state = 86
                self.function_type()
                self.state = 87
                self.functionId()
                self.state = 88
                self.match(SylParser.OPEN_ARGUMENTS)
                self.state = 89
                self.match(SylParser.ID)
                self.state = 90
                self.match(SylParser.CLOSE_ARGUMENTS)
                self.state = 91
                self.match(SylParser.OPEN_BLOCK)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 9280082149376) != 0):
                    self.state = 95
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        self.state = 92
                        self.instruction()
                        pass

                    elif la_ == 2:
                        self.state = 93
                        self.standard_output()
                        pass

                    elif la_ == 3:
                        self.state = 94
                        self.functionCall()
                        pass


                    self.state = 99
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 100
                self.match(SylParser.RETURN)
                self.state = 101
                self.expression(0)
                self.state = 102
                self.match(SylParser.END_OF_INSTRUCTION)
                self.state = 103
                self.match(SylParser.CLOSE_BLOCK)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 105
                self.match(SylParser.DEF_FUNC)
                self.state = 106
                self.match(SylParser.VOID)
                self.state = 107
                self.functionId()
                self.state = 108
                self.match(SylParser.OPEN_ARGUMENTS)
                self.state = 109
                self.match(SylParser.ID)
                self.state = 110
                self.match(SylParser.CLOSE_ARGUMENTS)
                self.state = 111
                self.match(SylParser.OPEN_BLOCK)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 9280082149376) != 0):
                    self.state = 115
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        self.state = 112
                        self.instruction()
                        pass

                    elif la_ == 2:
                        self.state = 113
                        self.standard_output()
                        pass

                    elif la_ == 3:
                        self.state = 114
                        self.functionCall()
                        pass


                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 120
                self.match(SylParser.CLOSE_BLOCK)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 122
                self.match(SylParser.DEF_FUNC)
                self.state = 123
                self.function_type()
                self.state = 124
                self.functionId()
                self.state = 125
                self.match(SylParser.OPEN_ARGUMENTS)
                self.state = 126
                self.match(SylParser.ID)
                self.state = 129 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 127
                    self.match(SylParser.SEPARATOR)
                    self.state = 128
                    self.match(SylParser.ID)
                    self.state = 131 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==23):
                        break

                self.state = 133
                self.match(SylParser.CLOSE_ARGUMENTS)
                self.state = 134
                self.match(SylParser.OPEN_BLOCK)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 9280082149376) != 0):
                    self.state = 138
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        self.state = 135
                        self.instruction()
                        pass

                    elif la_ == 2:
                        self.state = 136
                        self.standard_output()
                        pass

                    elif la_ == 3:
                        self.state = 137
                        self.functionCall()
                        pass


                    self.state = 142
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 143
                self.match(SylParser.RETURN)
                self.state = 144
                self.expression(0)
                self.state = 145
                self.match(SylParser.END_OF_INSTRUCTION)
                self.state = 146
                self.match(SylParser.CLOSE_BLOCK)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 148
                self.match(SylParser.DEF_FUNC)
                self.state = 149
                self.match(SylParser.VOID)
                self.state = 150
                self.functionId()
                self.state = 151
                self.match(SylParser.OPEN_ARGUMENTS)
                self.state = 152
                self.match(SylParser.ID)
                self.state = 155 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 153
                    self.match(SylParser.SEPARATOR)
                    self.state = 154
                    self.match(SylParser.ID)
                    self.state = 157 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==23):
                        break

                self.state = 159
                self.match(SylParser.CLOSE_ARGUMENTS)
                self.state = 160
                self.match(SylParser.OPEN_BLOCK)
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 9280082149376) != 0):
                    self.state = 164
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                    if la_ == 1:
                        self.state = 161
                        self.instruction()
                        pass

                    elif la_ == 2:
                        self.state = 162
                        self.standard_output()
                        pass

                    elif la_ == 3:
                        self.state = 163
                        self.functionCall()
                        pass


                    self.state = 168
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 169
                self.match(SylParser.CLOSE_BLOCK)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(SylParser.AssignContext,0)


        def if_block(self):
            return self.getTypedRuleContext(SylParser.If_blockContext,0)


        def while_block(self):
            return self.getTypedRuleContext(SylParser.While_blockContext,0)


        def getRuleIndex(self):
            return SylParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = SylParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruction)
        try:
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [36, 37, 38, 43]:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.assign()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.if_block()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 3)
                self.state = 175
                self.while_block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_type(self):
            return self.getTypedRuleContext(SylParser.Variable_typeContext,0)


        def variableId(self):
            return self.getTypedRuleContext(SylParser.VariableIdContext,0)


        def ASSIGN(self):
            return self.getToken(SylParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(SylParser.ExpressionContext,0)


        def END_OF_INSTRUCTION(self):
            return self.getToken(SylParser.END_OF_INSTRUCTION, 0)

        def getRuleIndex(self):
            return SylParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = SylParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assign)
        try:
            self.state = 189
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [36, 37, 38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.variable_type()
                self.state = 179
                self.variableId()
                self.state = 180
                self.match(SylParser.ASSIGN)
                self.state = 181
                self.expression(0)
                self.state = 182
                self.match(SylParser.END_OF_INSTRUCTION)
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.variableId()
                self.state = 185
                self.match(SylParser.ASSIGN)
                self.state = 186
                self.expression(0)
                self.state = 187
                self.match(SylParser.END_OF_INSTRUCTION)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableIdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SylParser.ID, 0)

        def getRuleIndex(self):
            return SylParser.RULE_variableId

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableId" ):
                listener.enterVariableId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableId" ):
                listener.exitVariableId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableId" ):
                return visitor.visitVariableId(self)
            else:
                return visitor.visitChildren(self)




    def variableId(self):

        localctx = SylParser.VariableIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variableId)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(SylParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionIdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SylParser.ID, 0)

        def getRuleIndex(self):
            return SylParser.RULE_functionId

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionId" ):
                listener.enterFunctionId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionId" ):
                listener.exitFunctionId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionId" ):
                return visitor.visitFunctionId(self)
            else:
                return visitor.visitChildren(self)




    def functionId(self):

        localctx = SylParser.FunctionIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionId)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(SylParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionId(self):
            return self.getTypedRuleContext(SylParser.FunctionIdContext,0)


        def OPEN_ARGUMENTS(self):
            return self.getToken(SylParser.OPEN_ARGUMENTS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SylParser.ID)
            else:
                return self.getToken(SylParser.ID, i)

        def CLOSE_ARGUMENTS(self):
            return self.getToken(SylParser.CLOSE_ARGUMENTS, 0)

        def SEPARATOR(self, i:int=None):
            if i is None:
                return self.getTokens(SylParser.SEPARATOR)
            else:
                return self.getToken(SylParser.SEPARATOR, i)

        def getRuleIndex(self):
            return SylParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):

        localctx = SylParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.state = 215
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.functionId()
                self.state = 196
                self.match(SylParser.OPEN_ARGUMENTS)
                self.state = 197
                self.match(SylParser.ID)
                self.state = 200 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 198
                    self.match(SylParser.SEPARATOR)
                    self.state = 199
                    self.match(SylParser.ID)
                    self.state = 202 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==23):
                        break

                self.state = 204
                self.match(SylParser.CLOSE_ARGUMENTS)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 206
                self.functionId()
                self.state = 207
                self.match(SylParser.OPEN_ARGUMENTS)
                self.state = 208
                self.match(SylParser.ID)
                self.state = 209
                self.match(SylParser.CLOSE_ARGUMENTS)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 211
                self.functionId()
                self.state = 212
                self.match(SylParser.OPEN_ARGUMENTS)
                self.state = 213
                self.match(SylParser.CLOSE_ARGUMENTS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Value_typeContext(ParserRuleContext):
        __slots__ = 'parser'
